--- a/style.css
+++ b/style.css
@@ -17,12 +17,37 @@ html, body{
 .header li{
     display: inline;
     list-style: none;
-    margin-left: 15px;
-    border-right: 5px;
+    border-top: none;
+    border-right: 2px black solid;
+    padding-left: 8px;
+    padding-right: 8px;
+
 }
 #button {
     padding: 7px;
     border-radius: 12px;
     background-color:#424242;
     color: white;
+}
+.banner {
+    width: 468px;
+    height: 60px;
+    margin-left: 50%;
+    margin-right: 50%;
+
+}
+h1 {
+    text-align: center;
+}
+img {
+    width: 250px;
+    height: 250px;
+}
+.images li,figure{
+    display: inline;
+    margin: 8px;
+    padding: 7px;
+}
+.images figcaption{
+    display: inline;
 }
