--- a/style.css
+++ b/style.css
@@ -37,6 +37,13 @@ html, body {
 .menu li:last-child:before {
     content: none;
 }
+.menu a {
+    text-decoration: none;
+    font-size: 16pt;
+    color:  #424242;
+    padding: 10px;
+    font-weight: bolder;
+}
 .carrinho span {
     margin-left: 15px;
     border: 1px  #424242 solid;
@@ -49,13 +56,6 @@ html, body {
     width: 30px;
     height: 30px;
     vertical-align: middle;
-}
-.menu a {
-    text-decoration: none;
-    font-size: 16pt;
-    color:  #424242;
-    padding: 10px;
-    font-weight: bolder;
 }
 .banner {
     display: block;
@@ -77,25 +77,54 @@ html, body {
 }
 .images {
     margin-top: 50px;
-    margin-left: 2%;
+    margin-left: 5%;
 }
 .align-img {
     display: inline-flex;
     justify-content: center;
 }
 .news {
-    margin-left: 8%;
+    margin-left: 10%;
 }
-.nl {
+.news h3, form {
+    display: inline-block;
+    vertical-align: middle;
+}
+h2 {
     font-size: 40pt;
+    margin-bottom: 0;
 }
-.nlt {
+.nlt{
     font-size: 13pt;
     text-align: justify;
+    width: 400px;
+    margin-right: 0;
+    font-weight: normal;
+}
+.form {
+    padding: 5px;
+    margin-right: 11%;
+    float: right;
+    display: inline;
+    vertical-align: middle;
+}
+.form input[type='text'] {
+    border-radius: 5px;
+    border: 1px black solid;
+    width: 320px;
+    height: 30px;
+}
+.form input[type='submit'] {
+    border-radius: 5px;
+    border: 1px black solid;
+    width: 120px;
+    height: 34px;
+    background-color: #FFFFFF;
+    padding: 0px;
 }
 footer {
     width: 100%;
-    background: #6C7A89;
+    background: #CCCCCC;
     display: inline-flex;
     flex-direction: row;
     justify-content: center;
@@ -116,9 +145,6 @@ footer ul {
     align-items: center;
     text-align: center;
 }
-.fb {
-    margin: 0px;
-}
-.fc {
+.fb, .fc {
     margin: 0px;
 }
