--- a/css/style_categorias.css
+++ b/css/style_categorias.css
@@ -2,6 +2,7 @@
 html, body {
     width: 85%;
     margin: auto;
+    margin-top: 5px;
     padding-left: 5%;
     padding-right: 5%;
     font-family: 'Nunito', sans-serif;
@@ -71,10 +72,21 @@ header nav, header figure, header div, header ul, header li {
 .frase-principal h1 {
     font-size: 30pt;
     text-align: center;
+    margin-bottom: 18px;
 }
 .frase-principal hr {
     width: 350px;
     border: 1px #000000 solid;
+    margin-bottom: 30px;
+}
+.frase-central {
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.frase-central h2 {
+    font-size: 30pt;
+    padding: 10px;
+    text-align: center;
 }
 .flex {
     margin-top: 3%;
@@ -87,6 +99,12 @@ header nav, header figure, header div, header ul, header li {
 .center-img {
     width: 250px;
     height: 250px;
+}
+.hr-center {
+    margin-right: -20px;
+}
+.todos-produtos {
+    text-align: center;
 }
 .news {
     display: flex;
