--- a/css/style_categorias.css
+++ b/css/style_categorias.css
@@ -149,7 +149,10 @@ footer figure {
     margin-top: 0;
 }
 .footer-text-contato-2 {
-    margin-bottom: 0;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 2px;
+    font-size: 14pt;
 }
 .social-div {
     padding-top: 0;
