--- a/css/style_form.css
+++ b/css/style_form.css
@@ -2,6 +2,7 @@
 html, body {
     width: 85%;
     margin: auto;
+    margin-top: 5px;
     padding-left: 5%;
     padding-right: 5%;
     font-family: 'Nunito', sans-serif;
@@ -12,8 +13,7 @@ header {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-top: 15px;
-    padding-bottom: 10px;
+    padding: 10px;
 }
 header nav, header figure, header div, header ul, header li {
     display: inline;
@@ -63,70 +63,67 @@ header nav, header figure, header div, header ul, header li {
 .banner {
     width: 970px;
 }
-h1 {
-    margin-top: 16px;
-    font-weight: bolder;
-    font-size: 20pt;
-}
-.produto {
-    width: 700px;
-    height: 600px;
-}
-.info {
-    text-align: justify;
-    font-weight: normal;
-    font-size: 12pt;
-}
-.form {
-    display: inline;
-}
-.form select[name='tamanho'] {
-    border: 1px black solid;
-    width: 200px;
-    height: 30px;
-}
-.form input[type='number'] {
-    border: 1px black solid;
-    width: 45px;
-    height: 25px;
-}
-.form input[type='submit'] {
-    border: 1px black solid;
-    width: 100%;
-    height: 40px;
-    background-color: #424242;
-    color:  #FFFFFF;
-    font-weight: bolder;
-    margin-top: 1%;
-}
-.feedback-text {
-    padding: 0;
-    margin: 0;
-}
-.frase-principal-2 {
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 10px;
-}
-.frase-principal-2 h2 {
-    font-size: 20pt;
+.frase-principal h1 {
+    font-size: 30pt;
     text-align: center;
-    margin-bottom: 18px;
+}
+.frase-principal hr {
+    width: 350px;
+    border: 1px #000000 solid;
 }
 .flex {
     margin-top: 3%;
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-items: center;
+}
+.flex figure {
+    display: inline-block;
 }
 .center-img {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
+}
+.news {
+    display: flex;
+    justify-content: center;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+.news div, .news form {
+    display: inline-block;
+    vertical-align: middle;
 }
 h2 {
     font-size: 40pt;
     margin: 0;
+}
+.nlt {
+    font-size: 13pt;
+    text-align: justify;
+    width: 400px;
+    margin-right: 0;
+    font-weight: normal;
+}
+.form {
+    padding: 5px;
+    float: right;
+    display: inline;
+}
+.form input[type='text'] {
+    border-radius: 5px;
+    border: 1px black solid;
+    width: 320px;
+    height: 30px;
+    margin-top: 15%;
+}
+.form input[type='submit'] {
+    border-radius: 5px;
+    border: 1px black solid;
+    width: 120px;
+    height: 34px;
+    background-color: #FFFFFF;
+    padding: 0px;
+    margin-top: 15%;
 }
 footer {
     width: 100%;
@@ -135,8 +132,7 @@ footer {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
 }
 footer figure, footer div, footer ul {
     display: inline;
@@ -154,7 +150,7 @@ footer a {
     font-weight: bolder;
 }
 footer figure {
-    margin: 0;
+    margin-left: 0;
 }
 .stars {
     margin: 0;
@@ -171,7 +167,10 @@ footer figure {
     margin-top: 0;
 }
 .footer-text-contato-2 {
-    margin-bottom: 0;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 2px;
+    font-size: 14pt;
 }
 .social-div {
     padding-top: 0;
