--- a/css/style_detalhes.css
+++ b/css/style_detalhes.css
@@ -124,6 +124,23 @@ h1 {
     width: 200px;
     height: 200px;
 }
+h1 {
+    font-size: 40pt;
+    padding-bottom: 0px;
+    margin: 0;
+}
+.info {
+    padding-bottom: 100px;
+}
+.form {
+    margin-top: 0;
+    padding-top: 0;
+}
+
+.feedback {
+    margin-top: 30px;
+    margin-left: 140px;
+}
 h2 {
     font-size: 40pt;
     margin: 0;
