--- a/css/style_detalhes.css
+++ b/css/style_detalhes.css
@@ -60,8 +60,8 @@ header nav, header figure, header div, header ul, header li {
     height: 30px;
     vertical-align: middle;
 }
-.banner {
-    width: 970px;
+.div {
+    width: 42%;
 }
 h1 {
     margin-top: 16px;
@@ -69,21 +69,33 @@ h1 {
     font-size: 20pt;
 }
 .produto {
-    width: 700px;
-    height: 600px;
+    width: 500px;
+    height: 500px;
+}
+h1 {
+    font-size: 40pt;
+    padding-bottom: 0px;
+    margin: 0;
+    margin-left: 10%;
 }
 .info {
     text-align: justify;
     font-weight: normal;
     font-size: 12pt;
+    padding-bottom: 100px;
+    margin-left: 10%;
+    width: 76%;
 }
 .form {
     display: inline;
+    margin-top: 0;
+    padding-top: 0;
 }
 .form select[name='tamanho'] {
     border: 1px black solid;
     width: 200px;
     height: 30px;
+    margin-left: 10%;
 }
 .form input[type='number'] {
     border: 1px black solid;
@@ -92,12 +104,17 @@ h1 {
 }
 .form input[type='submit'] {
     border: 1px black solid;
-    width: 100%;
+    width: 75%;
     height: 40px;
     background-color: #424242;
     color:  #FFFFFF;
     font-weight: bolder;
-    margin-top: 1%;
+    margin-top: 2%;
+    margin-left: 10%;
+}
+.feedback {
+    margin-top: 30px;
+    margin-left: 32%;
 }
 .feedback-text {
     padding: 0;
@@ -116,30 +133,11 @@ h1 {
 .flex {
     margin-top: 3%;
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-items: center;
 }
 .center-img {
     width: 200px;
     height: 200px;
-}
-h1 {
-    font-size: 40pt;
-    padding-bottom: 0px;
-    margin: 0;
-}
-.info {
-    padding-bottom: 100px;
-}
-.form {
-    margin-top: 0;
-    padding-top: 0;
-}
-
-.feedback {
-    margin-top: 30px;
-    margin-left: 140px;
 }
 h2 {
     font-size: 40pt;
