--- a/css/style_categorias.css
+++ b/css/style_categorias.css
@@ -1,69 +1,4 @@
 @charset "UTF-8";
-html, body {
-    width: 85%;
-    margin: auto;
-    padding-left: 5%;
-    padding-right: 5%;
-    font-family: 'Nunito', sans-serif;
-}
-header {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding-top: 15px;
-    padding-bottom: 10px;
-    background: #CCCCCC;
-}
-header nav, header figure, header div, header ul, header li {
-    display: inline;
-    vertical-align: middle;
-}
-.logo {
-    width: 85px;
-    height: 50px;
-}
-.barra {
-    padding: 5px;
-}
-.barra input {
-    border-radius: 5px;
-    border: 1px black solid;
-    width: 350px;
-    height: 30px;
-}
-.menu ul {
-    float: right;
-}
-.menu li:before {
-    content: " | ";
-}
-.menu li:first-child:before, .menu li:last-child:before {
-    content: none;
-}
-.menu a {
-    text-decoration: none;
-    font-size: 16pt;
-    color:  #424242;
-    padding: 10px;
-    font-weight: bolder;
-}
-.carrinho span {
-    border: 1px  #424242 solid;
-    padding: 10px;
-    color: white;
-    background-color: #424242;
-    border-radius: 15px;
-}
-.icons-img {
-    width: 30px;
-    height: 30px;
-    vertical-align: middle;
-}
-.banner {
-    width: 970px;
-}
 .frase-principal {
     background: #CCCCCC;
     width: 100%;
@@ -102,78 +37,17 @@ header nav, header figure, header div, header ul, header li {
     width: 250px;
     height: 250px;
 }
-h2 {
-    font-size: 40pt;
-    margin: 0;
+.hr-1 {
+    margin-top: 70px;
+    margin-bottom: 70px;
 }
-footer {
-    width: 100%;
-    background: #CCCCCC;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-footer figure, footer div, footer ul {
-    display: inline;
-    vertical-align: middle;
-}
-footer ul {
-    float: right; 
-    list-style: none;
-}
-footer a {
-    text-decoration: none;
-    font-size: 16pt;
-    color:  #424242;
-    padding: 10px;
-    font-weight: bolder;
-}
-footer figure {
-    margin: 0;
-}
-.stars {
-    margin: 0;
-    padding: 0;
-}
-.footer-text {
-    font-size: 13pt;
-    text-align: justify;
-    font-weight: normal;
-}
-.footer-text-contato, .footer-text-contato-2 {
+.todos-produtos-text {
     width: 100%;
     text-align: center;
     margin-top: 0;
-}
-.footer-text-contato-2 {
-    margin: 0;
-    padding: 0;
-    padding-bottom: 2px;
-    font-size: 14pt;
-}
-.social-div {
-    padding-top: 0;
-    display: flex;
-    justify-content: center;
-}
-.social-img {
-    vertical-align: middle;
-    padding: 4px;
-}
-.social-link{
-    padding: 0;
-}
-.box {
-    width: 2%;
-    float: left;
-    height: 120px;
-}
-.linha-vertical {
-    border-left: 1px solid;
-    box-sizing: border-box;
+    margin-bottom: 0;
+    font-size: 22pt;
+    font-weight: bold;
 }
 .garantia {
     display: flex;
@@ -187,12 +61,20 @@ footer figure {
 .garantia h2 {
     font-size: 20pt;
     font-weight: 900;
+    margin: 0;
 }
 .garantia hr {
     border: 1px solid;
     width: 100px;
     margin: 0;
     padding: 0;
+}
+.garantia h3 {
+    font-size: 10pt;
+    text-align: justify;
+    width: 300px;
+    margin-right: 0;
+    font-weight: normal;
 }
 .garantia a {
     text-decoration: none;
@@ -202,29 +84,10 @@ footer figure {
     padding-bottom: 10px;
     font-weight: bolder;
 }
-.garantia-text {
-    font-size: 10pt;
-    text-align: justify;
-    width: 300px;
-    margin-right: 0;
-    font-weight: normal;
-}
 .contato span {
     border: 1px  #424242 solid;
     padding: 10px;
     color: white;
     background-color: #424242;
     border-radius: 1px;
-}
-.todos-produtos-text {
-    width: 100%;
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 22pt;
-    font-weight: bold;
-}
-.hr-1 {
-    margin-top: 70px;
-    margin-bottom: 70px;
 }
